--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "node app.js",
+    "start": "node api/index.js",
     "postinstall": "prisma generate"
   },
   "keywords": [],
